--- a/casa/Arrays/test/CMakeLists.txt
+++ b/casa/Arrays/test/CMakeLists.txt
@@ -58,6 +58,6 @@ if(Boost_FOUND)
 	add_executable (arraytest ${testfiles})
 	add_pch_support(arraytest)
 	target_link_libraries(arraytest casa_casa ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
-	add_test (arraytest ${CMAKE_SOURCE_DIR}/cmake/cmake_assay ./arraytest)
+	add_test (NAME arraytest COMMAND arraytest)
 	add_dependencies(check arraytest)
 endif(Boost_FOUND)
