--- a/tables/AlternateMans/test/CMakeLists.txt
+++ b/tables/AlternateMans/test/CMakeLists.txt
@@ -27,6 +27,6 @@ if(Boost_FOUND)
   add_executable (altmantest ${testfiles})
   add_pch_support(altmantest)
   target_link_libraries(altmantest casa_tables ${Boost_LIBRARIES} ${EXTRA_ALTMANTEST_LIBRARIES})
-  add_test (altmantest ${CMAKE_SOURCE_DIR}/cmake/cmake_assay ./altmantest)
+  add_test (NAME altmantest COMMAND altmantest)
   add_dependencies(check altmantest)
 endif(Boost_FOUND)
