--- a/measures/Measures/test/CMakeLists.txt
+++ b/measures/Measures/test/CMakeLists.txt
@@ -30,20 +30,24 @@ foreach (test ${tests})
     add_dependencies(check ${test})
 endforeach (test)
 
-find_package(Boost COMPONENTS unit_test_framework system)
+find_package(Boost COMPONENTS unit_test_framework)
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIR})
 
     add_executable (measurestest test.cc tCyclicPtr.cc)
     add_pch_support(measurestest)
-    target_link_libraries(measurestest casa_measures ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
-    add_test (measurestest ${CMAKE_SOURCE_DIR}/cmake/cmake_assay ./measurestest)
+    if(TARGET Boost::unit_test_framework)
+        target_link_libraries(measurestest casa_measures Boost::unit_test_framework)
+    else()
+        target_link_libraries(measurestest casa_measures ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+    endif()
+    add_test (NAME measurestest COMMAND measurestest)
     add_dependencies(check measurestest)
 endif(Boost_FOUND)
 
 if (SOFA_FOUND)
     add_executable (tIAU2000 SofaTest.cc tIAU2000.cc)
     target_link_libraries (tIAU2000 casa_measures ${SOFA_LIBRARY})
-    add_test (tIAU2000 ${CMAKE_SOURCE_DIR}/cmake/cmake_assay ./tIAU2000)
+    add_test (NAME tIAU2000 COMMAND tIAU2000)
     add_dependencies(check tIAU2000)
 endif (SOFA_FOUND)
