--- a/tables/Dysco/CMakeLists.txt
+++ b/tables/Dysco/CMakeLists.txt
@@ -51,8 +51,12 @@ if(BUILD_TESTING)
       tests/testdyscostman.cc
       tests/testtimeblockencoder.cc
       )
-    target_link_libraries(tDysco ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} casa_tables casa_casa)
-    add_test(tDysco tDysco)
+    if(TARGET Boost::filesystem AND TARGET Boost::unit_test_framework)
+      target_link_libraries(tDysco Boost::filesystem Boost::unit_test_framework ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} casa_tables casa_casa)
+    else()
+      target_link_libraries(tDysco ${Boost_FILESYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} casa_tables casa_casa)
+    endif()
+    add_test(NAME tDysco COMMAND tDysco)
   else()
     message("Boost testing framework not found.")
   endif()
